# robot_localization_tools

./: .project  CMakeLists.txt  README.md  package.xml
docs/: eclipse_projects.bash  eclipse_projects.sh
include/robot_localization_error/: robot_localization_error.h  twist_publisher.h
include/robot_localization_tools/: robot_localization_error.h  twist_publisher.h
install/: a_dependencies.sh  b_repositories.bash  install.bash
launch/: path.yaml  robot_localization_error.launch  twist_publisher.launch
msg/: LocalizationError.msg
scripts/: add_time_offset.py  change_camera_info.py  change_tf.py  path_plotter_3d.py  probability_distribution_plotter.py  remove_frame_ids_leading_slash.py  remove_tf.py  reset_imu_rotation.py  topic_supervisor.py
src/: robot_localization_error.cpp  robot_localization_error_node.cpp  twist_publisher.cpp  twist_publisher_node.cpp
tools/: add_tf.py  add_time_offset.py  bag2csv.bash  bag2csv.sh  change_camera_info.py  change_tf.py  generate_process_monitor_graphs.bash  generate_process_monitor_graphs.sh  graph_plotter.py  path_plotter.py  path_plotter_3d.py  path_velocity_and_acceleration_plotter.py  probability_distribution_fitting.py  probability_distribution_plotter.py  process_monitor.sh  remove_text_from_filenames.bash  remove_text_from_filenames.sh  remove_tf.py  reset_imu_rotation.py  save_parameters.bash  save_parameters.sh
tools/build_ros_maps_from_cad_models/: 1_sldasm_to_dxf.txt  2_dxf_to_png.txt  3_png_to_pgm.txt
